@@ -1,3 +1,9 @@
+2003-04-21  Alex Duggan  <aldug@gnome.org>
+
+	* TODO: Initial import
+	
+	* Makefile.am: s/${TAR}/tar to work around problem on rh9
+
 2003-04-18 Christian Schaller <uraues@gnome.org>
 	* Update Nuvola metatheme
 	* Adding Smooth Winther GTK theme to Nuvola
